--- a/index.html
+++ b/index.html
@@ -11,31 +11,69 @@
 
 <body>
 
-    <main class="container">
-        <nav class="nav">
-            <ul>
-                <li><img src="img/logo.png" alt="logo"></li>
-                <li>
-                    <div class="nav-links">
-                        <ul>
-                            <li>Customer</li>
-                            <li>Contact</li>
-                        </ul>
+    <div class="container">
+        <main>
+            <header>
+                <nav class="nav">
+                    <ul>
+                        <li><img src="img/logo.png" alt="logo"></li>
+                        <li>
+                            <div class="nav-links">
+                                <ul>
+                                    <li>Customer</li>
+                                    <li>Contact</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="front-section">
+                    <div class="left-section">
+                        <div class="text-section">
+                            <div class="green-headings">
+                                <h3>Download</h3>
+                                <h4>Free Software</h4>
+                            </div>
+                            <h4 class="text-black "> LANDING PAGES</h4>
+                            <p class="intro-text "> It is a long established fact that a reader will be distracted by
+                                the
+                                readable content of a
+                                page
+                                when looking at its
+                                layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                                of
+                                letters,</p>
+                            <button>Getting Started</button>
+                        </div>
                     </div>
-                </li>
-            </ul>
-        </nav>
-        <div class="front-section">
-            <div class="left-section">
-                <h3>Download</h3>
-                <h4>Free Software</h4>
-            </div>
-            <div class="right-section">
-                <img src="img/img.png" alt="mobile Image">
-            </div>
-        </div>
+                    <div class="right-section">
+                        <img src="img/img.png" alt="mobile Image">
+                    </div>
+                </div>
+            </header>
+            <section class="services-section">
+                <div class="service">
+                    <div class="service-img"></div>
+                    <h5>Software</h5>
+                    <p>It is a long established fact that a reader will be distracted by the
+                        readable contentt has a more-or- less norf letters,</p>
+                </div>
+                <div class="service">
+                    <img src="img/service2.png" alt="Service 1">
+                    <h5>For Mobile</h5>
+                    <p>It is a long established fact that a reader will be distracted by the
+                        readable contentt has a more-or- less norf letters,</p>
+                </div>
+                <div class="service">
+                    <img src="img/service3.png" alt="Service 1">
+                    <h5>For Computer</h5>
+                    <p>It is a long established fact that a reader will be distracted by the
+                        readable contentt has a more-or- less norf letters,</p>
+                </div>
+            </section>
+        </main>
 
-    </main>
+    </div>
 
 </body>
 
