Who we are section completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <main>
             <header>
-                <nav class="nav">
+                <nav class="nav left-margin right-margin">
                     <ul>
                         <li><img src="img/logo.png" alt="logo"></li>
                         <li>
@@ -28,7 +28,7 @@
                     </ul>
                 </nav>
                 <div class="front-section">
-                    <div class="left-section">
+                    <div class="left-section left-margin">
                         <div class="text-section">
                             <div class="green-headings">
                                 <h3>Download</h3>
@@ -53,22 +53,60 @@
             </header>
             <section class="services-section">
                 <div class="service">
-                    <div class="service-img"></div>
+                    <div class="service-img-1"></div>
                     <h5>Software</h5>
                     <p>It is a long established fact that a reader will be distracted by the
                         readable contentt has a more-or- less norf letters,</p>
                 </div>
                 <div class="service">
-                    <img src="img/service2.png" alt="Service 1">
+                    <div class="service-img-2"></div>
                     <h5>For Mobile</h5>
                     <p>It is a long established fact that a reader will be distracted by the
                         readable contentt has a more-or- less norf letters,</p>
                 </div>
                 <div class="service">
-                    <img src="img/service3.png" alt="Service 1">
+                    <div class="service-img-3"></div>
                     <h5>For Computer</h5>
                     <p>It is a long established fact that a reader will be distracted by the
                         readable contentt has a more-or- less norf letters,</p>
+                </div>
+            </section>
+
+            <section class="who-we-are">
+                <h4>Who <span>We Are</span></h4>
+                <div class="who-we-are-section">
+                    <img src="img/why1.png" alt="WHY1">
+                    <div>
+                        <h5>Middle of Text</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form,
+                            by injected humour, or randomised words which don't look even slightly believable. If you
+                            are
+                            going to use a passage of
+                            Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of
+                            text.
+                            All the Lorem Ipsum
+                            generators on the Internet tend to repeat</p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+                <div class="who-we-are-section">
+                    <img src="img/why2.png" alt="WHY1">
+                    <div>
+                        <h5>Middle of Text</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form,
+                            by injected humour, or randomised words which don't look even slightly believable. If you
+                            are
+                            going to use a passage of
+                            Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of
+                            text.
+                            All the Lorem Ipsum
+                            generators on the Internet tend to repeat</p>
+                        <button>Read More</button>
+                    </div>
                 </div>
             </section>
         </main>
