client testimonial completed

--- a/index.html
+++ b/index.html
@@ -109,6 +109,45 @@
                     </div>
                 </div>
             </section>
+            <section class="client-testimonial">
+                <h4>Clients <span>Testimonial</span></h4>
+                <p>use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
+                    middle of text. All
+                    the Lorem Ipsum generators on the</p>
+                <div class="testinomial-list">
+                    <div class="testimonial">
+                        <div class="avatar"></div>
+                        <h5>WHEN LOOKING</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt iste distinctio nihil nostrum
+                            minima aliquam. Odit temporibus optio sapiente, necessitatibus nesciunt obcaecati ea
+                            dignissimos
+                            ullam consequuntur sed rerum, alias hic.</p>
+                    </div>
+                    <div class="testimonial">
+                        <div class="avatar"></div>
+                        <h5>WHEN LOOKING</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt iste distinctio nihil nostrum
+                            minima aliquam. Odit temporibus optio sapiente, necessitatibus nesciunt obcaecati ea
+                            dignissimos
+                            ullam consequuntur sed rerum, alias hic.</p>
+                    </div>
+                    <div class="testimonial">
+                        <div class="avatar"></div>
+                        <h5>WHEN LOOKING</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt iste distinctio nihil nostrum
+                            minima aliquam. Odit temporibus optio sapiente, necessitatibus nesciunt obcaecati ea
+                            dignissimos
+                            ullam consequuntur sed rerum, alias hic.</p>
+                    </div>
+
+
+                </div>
+                <div class="more">
+                    <div class="rounded"></div>
+                    <div class="rounded"></div>
+                    <div class="rounded"></div>
+                </div>
+            </section>
         </main>
 
     </div>
