--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Radiance</title>
 </head>
@@ -148,10 +151,44 @@
                     <div class="rounded"></div>
                 </div>
             </section>
+
+            <div class="faq">
+                <img src="img/ask.jpg" alt="">
+                <div>
+                    <h4>Frequenctly Asked <span>Questions?</span></h4>
+                    <div class="questions">
+                        <div class="question">
+                            Why is Dummy text of Printing and typesetting industry? <span><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                        <div class="question">
+                            Why is Dummy text of Printing and typesetting industry? <span><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                        <div class="question">
+                            Why is Dummy text of Printing and typesetting industry? <span><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                        <div class="question">
+                            Why is Dummy text of Printing and typesetting industry? <span><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                        <div class="question">
+                            Why is Dummy text of Printing and typesetting industry? <span><i
+                                    class="fa-solid fa-plus"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
     </div>
 
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
+        integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
