Desktop View Completed

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
             </section>
 
-            <div class="faq">
+            <section class="faq">
                 <img src="img/ask.jpg" alt="">
                 <div>
                     <h4>Frequenctly Asked <span>Questions?</span></h4>
@@ -179,7 +179,34 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
+
+            <section class="contact-us">
+                <div class="left-contact">
+                    <h4>Contact <span>US</span></h4>
+                    <div>
+                        <p>Now Start</p>
+                        <p>Download</p>
+                        <p>Free Landing Page</p>
+                    </div>
+                    <button>Download</button>
+                </div>
+                <div class="right-contact">
+
+                    <form class="contact-form">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <input type="text" placeholder="Subject">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <button>Send Message</button>
+                    </form>
+
+                </div>
+            </section>
+
+            <footer>
+                <p>&#169;All Right Reserved. Devsinc</p>
+            </footer>
         </main>
 
     </div>
